objects/Job_Seeker_Qualification__c.object
<CustomObject>
    <fields>
        <fullName>Desc__c</fullName>
        <description>For education this would be school name. This is not used in matching criteria.</description>
        <inlineHelpText>For education this would be school name. This is not used in matching criteria.</inlineHelpText>
        <label>Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <description>For education this would be major. Not included in match. For reporting purposes only.</description>
        <inlineHelpText>For education this would be major. Not included in match. For reporting purposes only.</inlineHelpText>
        <label>Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Only fill out if relevant</description>
        <inlineHelpText>Only fill out if relevant</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <label>Importance</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Posting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Posting</label>
        <referenceTo>Job_Posting__c</referenceTo>
        <relationshipLabel>Qualifications</relationshipLabel>
        <relationshipName>Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Seeker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Qualifications</relationshipLabel>
        <relationshipName>Job_Seeker_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualifications__c</fullName>
        <globalPicklist>Qualifications</globalPicklist>
        <label>Qualifications</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Qualification</label>
    <nameField>
        <displayFormat>JSQ-{0000}</displayFormat>
        <label>JS Qual Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualifications</pluralLabel>
    <recordTypes>
        <fullName>Certification</fullName>
        <active>true</active>
        <label>Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Education</fullName>
        <active>true</active>
        <label>Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Skill</fullName>
        <active>true</active>
        <label>Skill</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Job_Posting_Seeker_Data_Integrity</fullName>
        <active>true</active>
        <errorConditionFormula>(NOT(ISBLANK(Job_Seeker__c)) &amp;&amp;
NOT(ISBLANK(Job_Posting__c)))</errorConditionFormula>
        <errorMessage>Job Seeker and Job Posting are both filled out.  Just fill out one or the other.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Important_or_Weight_for_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Job_Seeker__c))
&amp;&amp;
(
NOT(ISBLANK(TEXT(Importance__c))) 
||
NOT(ISNULL(Weight__c )) 
)</errorConditionFormula>
        <errorMessage>For Job Seeker Qualifications, don&apos;t fill out Importance or Weight</errorMessage>
    </validationRules>
</CustomObject>